Redid my whole system

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -45,7 +45,7 @@ $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show combi
 $browser = firefox
-$studentbrowser = firefox --profile /home/n4v/.mozilla/firefox/ch27apni.Student/
+$studentbrowser = firefox --profile /home/n4v/.mozilla/firefox/Student/
 $wallpaper = /home/n4v/.config/backgrounds/astronaut.png
 
 # +==========================================================+
@@ -55,16 +55,24 @@ $wallpaper = /home/n4v/.config/backgrounds/astronaut.png
 # +==========================================================+
 
 general { 
-    gaps_in = 5
-    gaps_out = 9
-    border_size = 2
+    # gaps_in = 5
+    # gaps_out = 9
+
+    gaps_in = 4
+    # gaps_out = 32
+    gaps_out = 40
+    # border_size = 2
+    border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(bdae93ee) 
-    col.inactive_border = rgba(282828aa)
+    # col.active_border = rgba(bdae93ee) 
+    # col.inactive_border = rgba(282828aa)
 
+    col.active_border = rgba(282828ee) 
+    col.inactive_border = rgba(282828aa)
+    
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false 
+    resize_on_border = true 
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -81,9 +89,11 @@ decoration {
     inactive_opacity = 1.0
 
     drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    # shadow_range = 4
+    shadow_range = 24
+    shadow_render_power = 2
+    # col.shadow = rgba(1a1a1aee)
+    col.shadow = rgba(121212ee)
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -175,8 +185,8 @@ animations {
 # |░▀▀▀░▀░▀░▀▀▀░▀▀▀░▀▀▀|
 # +====================+
 
-exec = gsettings set org.gnome.desktop.interface gtk-theme 'Gruvbox-Dark'
-exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
+# exec = gsettings set org.gnome.desktop.interface gtk-theme ''
+# exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 exec = sudo systemctl start bluetooth
 
 # exec-once = $terminal
@@ -187,7 +197,7 @@ exec-once = blueman-applet
 exec-once = waybar
 # exec-once = hyprpaper
 exec-once = swww-daemon
-exec-once = swww img /home/n4v/.config/backgrounds/astronaut.png
+exec-once = swww img /home/n4v/Pictures/Wallpapers/gruv_astronaut.png
 exec-once = clipse -listen
 exec-once = clipse -wl-store
 exec-once = spotifyd
