--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -13,6 +13,7 @@ bind = $mainMod SHIFT,  Q, killactive,
 bind = $mainMod,        Q, exec, pypr toggle music
 bind = $mainMod,        W, exec, pypr toggle term
 bind = $mainMod,        E, exec, Thunar
+binde = $mainMod,        R, exec, /home/n4v/.config/hypr/scripts/semifull.sh
 bind = $mainMod SHIFT,  R, exec, hyprctl reload && pypr reload
 bind = $mainMod,        T, exec, killall waybar || waybar
 bind = $mainMod,        I, togglesplit, # dwindle
