--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -6,7 +6,8 @@
 
 # NOTE: General
 windowrulev2=noblur,class:^()$,title:^()$
-windowrulev2 = bordercolor rgb(7daea3), fullscreen:1 # Full screen indicator color
+# windowrulev2 = bordercolor rgb(7daea3), fullscreen:1 # Full screen indicator color
+windowrulev2 = dimaround, fullscreen:1 # Full screen indicator color
 # windowrulev2 = bordercolor rgb(fbf1c7), fullscreen:1 # Full screen indicator color      #fbf1c7
 # windowrulev2 = bordersize 3, fullscreen:1 # Full screen indicator border size increase
 # windowrulev2 = opacity 0.95, fullscreen:1
@@ -77,7 +78,6 @@ windowrulev2 = opacity 0.80 0.80,class:(Thunar)
 
 # windowrulev2 = opacity 0.80 0.80,title:^(Spotify Premium)$
 windowrulev2 = opacity 0.85 0.85,class:^(Spotify)$
-
 
 
 ### Experimental Applications 
