--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -79,6 +79,13 @@ windowrulev2 = opacity 0.80 0.80,class:(Thunar)
 # windowrulev2 = opacity 0.80 0.80,title:^(Spotify Premium)$
 windowrulev2 = opacity 0.85 0.85,class:^(Spotify)$
 
+# NOTE: Xwayland Video Bridge
+windowrulev2 = opacity 0.0 override, class:^(xwaylandvideobridge)$
+windowrulev2 = noanim, class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
+windowrulev2 = noblur, class:^(xwaylandvideobridge)$
+
 
 ### Experimental Applications 
 # windowrulev2 = opacity 0.85 0.85,class:^(simple)$
