--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -191,6 +191,7 @@ exec = sudo systemctl start bluetooth
 
 # exec-once = $terminal
 exec-once = pypr
+exec-once = xhost si:localuser:root
 exec-once = hypridle
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
