--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -9,7 +9,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 
 # Top Row
-bind = $mainMod SHIFT,  Q, killactive,
+binde = $mainMod SHIFT,  Q, killactive,
 bind = $mainMod,        Q, exec, pypr toggle music
 bind = $mainMod,        W, exec, pypr toggle term
 bind = $mainMod,        E, exec, Thunar
@@ -41,7 +41,7 @@ bind = $mainMod,        Apostrophe, exec, pypr show bluetuith # taking up memory
 bind = $mainMod, Space, exec, pypr shift_monitors +1
 bind = $mainMod,        Slash, exec, pypr show proc
 
-bind = $mainMod,        Return, exec, $terminal
+binde = $mainMod,        Return, exec, $terminal
 bind = $mainMod,        Backspace, exit,
 
 # Move focus with mainMod + arrow keys
