--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -43,7 +43,6 @@ source = ~/.config/hypr/workspaces.conf
 
 $terminal = kitty
 $fileManager = dolphin
-$menu = rofi -show combi
 $browser = firefox
 $studentbrowser = firefox --profile /home/n4v/.mozilla/firefox/Student/
 $wallpaper = /home/n4v/.config/backgrounds/astronaut.png
@@ -55,12 +54,12 @@ $wallpaper = /home/n4v/.config/backgrounds/astronaut.png
 # +==========================================================+
 
 general { 
-    # gaps_in = 5
-    # gaps_out = 9
+    gaps_in = 5
+    gaps_out = 9
 
-    gaps_in = 4
-    # gaps_out = 32
-    gaps_out = 40
+    # gaps_in = 4
+    # # gaps_out = 32
+    # gaps_out = 40
     # border_size = 2
     border_size = 3
 
@@ -88,13 +87,14 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = true
+shadow {
+    enabled = true
     # shadow_range = 4
-    shadow_range = 24
-    shadow_render_power = 2
+    range = 24
+    render_power = 2
     # col.shadow = rgba(1a1a1aee)
-    col.shadow = rgba(121212ee)
-
+    color = rgba(121212ee)
+}
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
       enabled = true
@@ -105,7 +105,6 @@ decoration {
       new_optimizations = true
       brightness = 0.90
     }
-    drop_shadow = yes
 
 
 }
@@ -171,13 +170,14 @@ animations {
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    # animation = NAME, ONOFF, SPEED, CURVE [,STYLE]
 
-    animation = windows, 1, 7, myBezier
+    animation = windows, 1, 5, myBezier
     animation = windowsOut, 1, 7, default, popin 85%
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 1, default
-    animation = workspaces, 1, 3, default
+    animation = workspaces, 1, 2, default
 }
 # +====================+
 # |░█▀▀░█░█░█▀▀░█▀▀░█▀▀|
@@ -187,6 +187,7 @@ animations {
 
 # exec = gsettings set org.gnome.desktop.interface gtk-theme ''
 # exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
+exec = gsettings set org.gnome.desktop.interface cursor-theme "Capitaine Cursors (Gruvbox) - White"
 exec = sudo systemctl start bluetooth
 
 # exec-once = $terminal
@@ -217,8 +218,9 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 # |░░▀░░▀░▀░▀░▀░▀▀▀░▀░▀░▀▀░░▀▀▀░▀▀▀░▀▀▀░░░░░░░░░░|
 # +==============================================+
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_SIZE,32
+env = HYPRCURSOR_THEME,"Capitaine Cursors (Gruvbox) - White"
+env = HYPRCURSOR_SIZE,32
 env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
