--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -21,7 +21,7 @@ bind = $mainMod,        O, togglefloating,
 bind = $mainMod,        P, pseudo, # dwindle
 
 # Middle Row
-bind = $mainMod,        D, exec, $menu
+bind = $mainMod,        D, exec, killall rofi || rofi -show combi
 bind = $mainMod,        S, exec, /home/n4v/.config/hypr/scripts/screenshot.sh rc
 bind = $mainMod SHIFT,  S, exec, /home/n4v/.config/hypr/scripts/screenshot.sh ri
 bind = $mainMod,        F, fullscreen, 1
