--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -86,9 +86,15 @@ windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
 windowrulev2 = noblur, class:^(xwaylandvideobridge)$
 
+# NOTE: VESKTOP
+windowrule = opacity 0.0 override,title:^(vesktop)$
 
 ### Experimental Applications 
 # windowrulev2 = opacity 0.85 0.85,class:^(simple)$
 windowrulev2 = float,title:^(radio buttons)$
 windowrulev2 = size 300 200,title:^(radio buttons)$
 # windowrulev2 = opacity 0.80 0.80,title:^(radio buttons)$
+# SpanishDict
+windowrulev2 = float, title:(.*SpanishDictionary\.com.*)
+windowrulev2 = float, class:^(firefox)$, title:.*SpanishDictionary\.com.*
+# windowrulev2 = size 900 500, class:(firefox), title:.*SpanishDictionary\.com.*
