Added swedish keyboard layout

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -133,10 +133,10 @@ binds {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout = us,es,se
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = grp:alt_space_toggle
     kb_rules =
 
     follow_mouse = 1
@@ -242,6 +242,7 @@ env = WLR_DRM_NO_ATOMIC,1
 
 cursor {
     no_hardware_cursors = true
+    inactive_timeout = 5
 }
 
 # +============================+
