Added moonfly and zellij changes

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,5 @@
-include ./kitty-themes/gruvbox-material.conf
+# include ./kitty-themes/gruvbox-material.conf
+include ./kitty-themes/moonfly.conf
 
 confirm_os_window_close 0
 enable_audio_bell no
