--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -7,7 +7,8 @@
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-
+bindl = , switch:on:Lid Switch, exec, hyprctl keyword monitor "eDP-1, preffered, auto, auto"
+bindl = , switch:off:Lid Switch, exec, hyprctl keyword monitor "eDP-1, disable"
 # Top Row
 binde = $mainMod SHIFT,  Q, killactive,
 bind = $mainMod,        Q, exec, pypr toggle music
