Cleaned some stuff up

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -64,7 +64,9 @@ general {
     # border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(bdae93ee) rgba(282828aa) 120deg
+    # col.active_border = rgba(bdae93ee) rgba(282828aa) 120deg
+    # col.inactive_border = rgba(282828aa)
+    col.active_border = rgba(c5c9c5ee) rgba(181616aa) 120deg
     col.inactive_border = rgba(282828aa)
 
     # col.active_border = rgba(282828ee) 
@@ -84,7 +86,8 @@ ecosystem {
 }
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    # rounding = 10
+    # rounding = 10
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -101,7 +104,7 @@ shadow {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
       enabled = true
-      size = 10
+      size = 0
       passes = 2
       ignore_opacity = on
       popups = true
@@ -168,7 +171,7 @@ device {
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 
 animations {
-    enabled = true
+    enabled = false
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
