--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,10 @@
 # include ./kitty-themes/gruvbox-material.conf
+# include ./kitty-themes/bathory.conf
 include ./kitty-themes/moonfly.conf
+# include ./kitty-themes/kanagawa-dragon.conf
 
+# background_opacity 0.7
+# background_blur 1
 confirm_os_window_close 0
 enable_audio_bell no
 clear_all_shortcuts yes
@@ -38,3 +42,6 @@ map ctrl+shift+page_down scroll_page_down
 ## Font Size
 map ctrl+shift+equal change_font_size all +2.0
 map ctrl+shift+minus change_font_size all -2.0
+
+## Reloading
+map ctrl+shift+f5 load_config_file
