--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -46,7 +46,7 @@ windowrulev2 = opacity 0.95, class:(pulsemixer)
 
 # NOTE: Terminal Emulator (Kitty)
 
-windowrulev2 = opacity 0.90 0.75,class:^(kitty)$
+# windowrulev2 = opacity 0.80 0.75,class:^(kitty)$
 
 
 # NOTE: Non-Nvim Text Editor (VSCode)
