Back to gruvbox, switch to blink.cmp, removed yazi settings

--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -8,6 +8,7 @@
 windowrulev2=noblur,class:^()$,title:^()$
 # windowrulev2 = bordercolor rgb(7daea3), fullscreen:1 # Full screen indicator color
 windowrulev2 = dimaround, fullscreen:1 # Full screen indicator color
+windowrulev2 = bordercolor rgba(f3eac7aa), fullscreen:1 # Full screen indicator color
 # windowrulev2 = bordercolor rgb(fbf1c7), fullscreen:1 # Full screen indicator color      #fbf1c7
 # windowrulev2 = bordersize 3, fullscreen:1 # Full screen indicator border size increase
 # windowrulev2 = opacity 0.95, fullscreen:1
@@ -71,7 +72,7 @@ windowrulev2 = opacity 0.80 0.80,class:(zathura)
 
 # NOTE: File Explorer (Thunar)
 
-windowrulev2 = opacity 0.80 0.80,class:(Thunar)
+windowrulev2 = opacity 0.90 0.90,class:(Thunar)
 
 
 # NOTE: Music Player (Spotify)
