--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,7 @@
-# include ./kitty-themes/gruvbox-material.conf
+include ./kitty-themes/gruvbox-material.conf
 # include ./kitty-themes/bathory.conf
-include ./kitty-themes/moonfly.conf
+# include ./kitty-themes/moonfly.conf
+# include ./kitty-themes/jellybeans.conf
 # include ./kitty-themes/kanagawa-dragon.conf
 
 # background_opacity 0.7
