--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -42,10 +42,11 @@ source = ~/.config/hypr/workspaces.conf
 # +==================================+
 
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = yazi
 $browser = firefox
 $studentbrowser = firefox --profile /home/n4v/.mozilla/firefox/Student/
-$wallpaper = /home/n4v/.config/backgrounds/astronaut.png
+# $wallpaper = /home/n4v/.config/backgrounds/astronaut.png
+# wallpaper = /home/n4v/.config/backgrounds/astronaut.png
 
 # +==========================================================+
 # |░█▀▀░█▀▀░█▀█░█▀▀░█▀▄░█▀█░█░░░░░█▀▀░█▀█░█▀█░█▀▀░▀█▀░█▀▀░█▀▀|
@@ -64,10 +65,10 @@ general {
     # border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    # col.active_border = rgba(bdae93ee) rgba(282828aa) 120deg
-    # col.inactive_border = rgba(282828aa)
-    col.active_border = rgba(c5c9c5ee) rgba(181616aa) 120deg
+    col.active_border = rgba(bdae93ee) rgba(282828aa) 120deg
     col.inactive_border = rgba(282828aa)
+    # col.active_border = rgba(eeeeeeee) rgba(282828aa) 120deg
+    # col.inactive_border = rgba(282828aa)
 
     # col.active_border = rgba(282828ee) 
     # col.inactive_border = rgba(282828aa)
@@ -86,8 +87,7 @@ ecosystem {
 }
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    # rounding = 10
-    # rounding = 10
+    rounding = 10
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -171,7 +171,7 @@ device {
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 
 animations {
-    enabled = false
+    enabled = true
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -197,6 +197,7 @@ exec = gsettings set org.gnome.desktop.interface cursor-theme "Capitaine Cursors
 exec = sudo systemctl start bluetooth
 
 # exec-once = $terminal
+exec-once = hyprsunset
 exec-once = pypr
 exec-once = xhost si:localuser:root
 exec-once = hypridle
@@ -205,7 +206,7 @@ exec-once = blueman-applet
 exec-once = waybar
 # exec-once = hyprpaper
 exec-once = swww-daemon
-exec-once = swww img /home/n4v/Pictures/Wallpapers/gruv_astronaut.png
+exec-once = swww img /home/n4v/Pictures/Wallpapers/wallpapers/brown28.png --resize=no-crop
 exec-once = clipse -listen
 exec-once = clipse -wl-store
 exec-once = spotifyd
